--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  
   <div id="main-content">
     <h1>Task Lister Lite™️</h1>
 
+
+    <button id ='sort-btn'>Sort by priority</button>
     <form id="create-task-form" action="" method="POST">
       <label for="new-task-description">Task description:</label>
       <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
